--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
